--- a/predictor.ipynb
+++ b/predictor.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "# loading the model\n",
-    "model_path = 'best_model.h5'\n",
+    "model_path = 'model1.h5'\n",
     "model = load_model(model_path)"
    ]
   },
